# algotrader

./: .gitignore  README.md  candlestick.py  config.py  pyproject.toml  utils.py
algotrader/: utils.py
algotrader/charting/: charting.py
algotrader/fetch/: dukascopy_data.py  mt5.py
algotrader/trade/: backtest.py  livetrade.py
fetch/: dukascopy_data.py  mt5.py
tests/: test_dukascopy_download.py  test_run_backtest.py
trade/: backtest.py  livetrade.py
