[tool.poetry]
name = "algotrader"
version = "0.1.0"
description = "Algorithmic trading framework"
authors = ["conolcedric@gmail.com"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
metatrader5 = "^5.0.5260"
jupyter = "^1.1.1"
lab = "^8.4"
pandas = "^2.3.2"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core"]

